Fix visible cursor

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,6 +18,10 @@ body {
 	height: 100%;
 }
 
+.production {
+	cursor: none;
+}
+
 button {
 	appearance: none;
 	border: none;
@@ -39,6 +43,7 @@ button {
 	text-decoration: none;
 	color: inherit;
 	z-index: 1;
+	outline: 0;
 }
 
 figure {
